tests/int/use_command/snapshots/integration__int__use_command__flags__modules_dir_module_flags_r_e_format_grouped.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - use
    - dir_module
    - "-r"
    - "-e"
    - "--format"
    - grouped
---
success: true
exit_code: 0
----- stdout -----
dir_module
 - crate::inline_modules::nested::deep::value
dir_module::child_dir
 - crate::file_module::greet
dir_module::child_file
 - crate::dir_module::greet

----- stderr -----
