tests/int/use_command/snapshots/integration__int__use_command__flags__modules_dir_module_flags_r_e_resolve-globs.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/modules
    - use
    - dir_module
    - "-r"
    - "-e"
    - "--resolve-globs"
---
success: true
exit_code: 0
----- stdout -----
crate::dir_module::greet
crate::file_module::greet
crate::inline_modules::nested::deep::value

----- stderr -----
