tests/int/use_command/snapshots/integration__int__use_command__flags__modules_dir_module_flags_resolve-globs.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - dir_module
    - "--resolve-globs"
---
success: true
exit_code: 0
----- stdout -----
crate::inline_modules::nested::deep::value

----- stderr -----
