tests/int/use_command/snapshots/integration__int__use_command__flags__modules_glob_patterns_flags_e.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - use
    - glob_patterns
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
crate::dir_module
crate::file_module
crate::glob_patterns::self_ref::*

----- stderr -----
